--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -22,7 +22,9 @@
   align-items: center;
 }
 
-.header nav div {
+.header nav div, .header nav a {
   font-size: 1.25rem;
+  color: #fafaf9;
   cursor: pointer;
+  text-decoration: none;
 }
