--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,7 +6,7 @@
   gap: 64px;
   padding: 16px;
   font-family: sans-serif;
-  background-color: #1c1917;
+  background-color: #365314;
   color: #fafaf9;
 }
 
