--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -24,6 +24,7 @@
 
 .header nav div, .header nav a {
   font-size: 1.5rem;
+  letter-spacing: 1px;
   color: #fafaf9;
   cursor: pointer;
   text-decoration: none;
