--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,7 +6,7 @@
   gap: 64px;
   padding: 16px;
   font-family: sans-serif;
-  background-color: #365314;
+  background-color: #0C4A6E;
   color: #fafaf9;
 }
 
