--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,6 +7,7 @@
     url(../assets/home.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   padding: 16px;
   text-shadow: 1px 1px 3px black;
   display: grid;
@@ -42,7 +43,7 @@
 
 .message button {
   background-color: white;
-  color: #A3E635;
+  color: #38BDF8;
   border: 0;
   padding: 24px 64px;
   border-radius: 72px;
