--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -29,3 +29,13 @@
   cursor: pointer;
   text-decoration: none;
 }
+
+.header .cart-size {
+  font-size: 1.2rem;
+  align-self: start;
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 4px 8px;
+  background-color: black;
+  color: white;
+}
