--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,7 @@
 .header {
   display: grid;
+  position: sticky;
+  top: 0;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
