--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -47,3 +47,11 @@
   cursor: pointer;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
 }
+
+.message button:hover {
+  filter: brightness(0.9);
+}
+
+.message button:active {
+  filter: brightness(0.8);
+}
